--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@knadh/autocomp": "^0.1.1",
     "@mui/icons-material": "^5.14.8",
     "@mui/lab": "^5.0.0-alpha.145",
     "@mui/material": "^5.14.8",
