--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,11 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@knadh/autocomp": "^0.1.1",
     "@mui/icons-material": "^5.14.8",
     "@mui/lab": "^5.0.0-alpha.145",
